Create first half of home

--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Base template</title>
+    <title>BGBH</title>
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
-    <link rel="stylesheet" href="./dist/style/main.css" />
+    <link rel="icon" type="image/png" href="https://lucascmedeiros.com.br/bgbh/favicon.ico" />
+    <link rel="stylesheet" href="dist/assets/styles/main.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;0,900;1,500&amp;display=swap" rel="stylesheet">
   </head>
   
   <body>
     <section id="wrapper_section">
       <div class="logo">
-        <img src="https://lucascmedeiros.com.br/bgbh/assets/images/logo.jpg" alt="Logo BGBH" />
+        <img src="https://lucascmedeiros.com.br/bgbh/dist/assets/images/logo_com_sombra.png" alt="Logo BGBH" />
       </div>
       <section class="intro">
         <div class="intro__text">
@@ -26,11 +27,15 @@
           <a class="btn btn-green" href="#">ADICIONAR JOGO</a>
           <a class="btn btn-red" href="#">REMOVER JOGO</a>
         </div>
-        <div class="intro__rules"></div>
+        <div class="intro__rules">
+          <a href="#">REGRAS PARA UTILIZAÇÃO DA PLANILHA</a>
+        </div>
+      </section>
+      <section class="advertisement">
       </section>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cash/4.1.4/cash.min.js"></script>
-    <script type="text/javascript" src="dist/bundle.js"></script>
+    <script type="text/javascript" src="dist/assets/scripts/bundle.js"></script>
 </body>
 
 </html>
