Add links to sheet

--- a/site/index.html
+++ b/site/index.html
@@ -23,8 +23,8 @@
           <b>BELO HORIZONTE</b> E REGIÃO.
         </div>
         <div class="intro__buttons">
-          <a class="btn btn-blue" href="#">PLANILHA DE TROCAS</a>
-          <a class="btn btn-green" href="#">ADICIONAR JOGO</a>
+          <a class="btn btn-blue" href="/planilha/" target="_blank">PLANILHA DE TROCAS</a>
+          <a class="btn btn-green" href="/planilha/create.php" target="_blank">ADICIONAR JOGO</a>
           <a class="btn btn-red" href="#">REMOVER JOGO</a>
         </div>
         <div class="intro__rules">
