renomeando planilha para lista

--- a/lista/regras-planilha.html
+++ b/lista/regras-planilha.html
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="/lista">Planilha <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/lista/adicionar-jogo.php">Adicionar jogo</a>
+                    <a class="nav-link" href="/lista/create.php">Incluir jogos</a>
                 </li>
             </ul>
         </div>
@@ -53,15 +53,14 @@
         </p>
         <p>
             Para adicionar jogos, clique aqui:
-            <a target="_blank" class="btn btn-sm btn-primary" href="//bgbh.com.br/lista/adicionar-jogo.php">Adicionar
-                jogo</a>
+            <a target="_blank" class="btn btn-sm btn-primary" href="//bgbh.com.br/lista/create.php">Adicionar
+                item</a>
         </p>
         <p>Para adicionar seus jogos na planilha, basta preencher o formulário corretamente. <br />
             Alguns campos são obrigatórios para qualquer tipo de negociação. O preço é obrigatório em caso de venda.
         </p>
         <p>Para solicitar a remoção de algum item da planilha, clique aqui:
-            <a target="_blank" class="btn btn-sm btn-danger" href="//bgbh.com.br/lista/remover-jogo.php">Solicitar
-                remoção
+            <a target="_blank" class="btn btn-sm btn-danger" href="//bgbh.com.br/lista/remove.php">Solicitar remoção
                 de item</a>
         </p>
         <p>Os itens solicitados serão adicionados em uma lista interna e os administradores irão removê-lo da
