--- a/lista/regras-utilizacao-lista.html
+++ b/lista/regras-utilizacao-lista.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt_BR">
 
 <head>
     <meta charset="UTF-8">
@@ -32,7 +32,7 @@
                     <a class="nav-link" href="/site">Site</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/lista">Planilha <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/lista">Lista <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/lista/adicionar-jogo.php">Adicionar jogo</a>
@@ -41,38 +41,36 @@
         </div>
     </nav>
     <div class="col-12" style="margin-top: 20px">
-        <h4>PLANILHAS DE TROCA E VENDA BGBH</h4>
+        <h4>LISTA DE TROCA & VENDA BGBH</h4>
         <h8>(aumente sua chance de negociação adicionando seus jogos)</h8>
         <p>
-            As planilhas são ferramentas adicionais e opcionais do grupo. <br />
+            A lista é uma ferramenta adicional e opcionais do grupo. <br />
             Recomendamos sua utilização para que seus jogos fiquem sempre com um acesso prático e rápido para outros
             usuários.
         </p>
-        <p>Para ver os jogos disponíveis na planilha de trocas e vendas clique aqui:
+        <p>Para ver os jogos disponíveis na lista de trocas & vendas clique aqui:
             <a target="_blank" class="btn btn-sm btn-success" href="//bgbh.com.br/lista">Ver planilha</a>
         </p>
         <p>
             Para adicionar jogos, clique aqui:
-            <a target="_blank" class="btn btn-sm btn-primary" href="//bgbh.com.br/lista/adicionar-jogo.php">Adicionar
+            <a target="_blank" class="btn btn-sm btn-primary" href="//bgbh.com.br/lista/create.php">Adicionar
                 jogo</a>
         </p>
-        <p>Para adicionar seus jogos na planilha, basta preencher o formulário corretamente. <br />
+        <p>Para adicionar seus jogos na lista, basta preencher o formulário corretamente. <br />
             Alguns campos são obrigatórios para qualquer tipo de negociação. O preço é obrigatório em caso de venda.
         </p>
-        <p>Para solicitar a remoção de algum item da planilha, clique aqui:
-            <a target="_blank" class="btn btn-sm btn-danger" href="//bgbh.com.br/lista/remover-jogo.php">Solicitar
-                remoção
+        <p>Para solicitar a remoção de algum item da lista, clique aqui:
+            <a target="_blank" class="btn btn-sm btn-danger" href="//bgbh.com.br/lista/remove.php">Solicitar remoção
                 de item</a>
         </p>
         <p>Os itens solicitados serão adicionados em uma lista interna e os administradores irão removê-lo da
-            planilha.
+            lista padrão.
         </p>
         <p>Ainda não temos uma maneira segura para alteração de itens. <br />
             Provisoriamente, caso queira fazer alguma alteração entre em contato com os adminstradores.
         </p>
-        <p> Os jogos na planilha são revisados periodicamente e precisam de uma confirmação simples de seus donos
-            para
-            permanecerem após determinados períodos e revisões.
+        <p> Os jogos na lista serão revisados periodicamente e precisarão de uma confirmação simples de seus donos
+            para permanecerem disponíveis após determinados períodos e revisões.
         </p>
         <p style="font-weight: bold; color: firebrick">
             Nenhuma venda ou troca utilizando a planilha é de responsabilidade da Boardgame BH.
