--- a/site/index.html
+++ b/site/index.html
@@ -71,7 +71,7 @@
 							</div>
 							<div class="col-4 col-12-medium">
 								<section>
-									<a target="_blank" href="/planilha/index.php" class="image featured btn-planilha"
+									<a target="_blank" href="/lista/index.php" class="image featured btn-planilha"
 										data-aos="fade-up" data-aos-duration="15000" data-aos-easing="ease-in-out">
 										<img src="images/btn-visualizar.png" alt="Visualizar lista" />
 										<header class="second">
@@ -82,7 +82,7 @@
 							</div>
 							<div class="col-4 col-12-medium">
 								<section>
-									<a target="_blank" href="/planilha/adicionar-jogo.php"
+									<a target="_blank" href="/lista/adicionar-jogo.php"
 										class="image featured btn-planilha" data-aos="fade-up" data-aos-duration="15000"
 										data-aos-easing="ease-in-out" data-aos-delay="300">
 										<img src="images/btn-adicionar.png" alt="adicionar jogos" />
@@ -94,7 +94,7 @@
 							</div>
 							<div class="col-4 col-12-medium">
 								<section>
-									<a target="_blank" href="/planilha/remover-jogo.php"
+									<a target="_blank" href="/lista/remover-jogo.php"
 										class="image featured btn-planilha" data-aos="fade-up" data-aos-duration="15000"
 										data-aos-easing="ease-in-out" data-aos-delay="600">
 										<img src="images/btn-remover.png" alt="remover jogos" />
@@ -108,8 +108,9 @@
 								<p class="regras-planilha">
 									<i class="far fa-file-alt"></i>
 									Confira as
-									<a href="regras-planilha.html" target="_blank">regras de utilização da lista de
-										trocas & vendas</a>
+									<a href="/lista/regras-utilizacao-lista.html" target="_blank">
+										regras de utilização da lista de trocas & vendas
+									</a>
 								</p>
 								<p class="highlight red aviso-responsabilidade">Nenhuma venda ou troca utilizando a
 									lista de trocas & vendas é de responsabilidade da Boardgame BH</p>
