--- a/site_old/index.html
+++ b/site_old/index.html
@@ -1034,13 +1034,13 @@
 
               <div class="wp-block-buttons aligncenter botoes-planilha">
                 <div class="wp-block-button is-style-primary"><a class="wp-block-button__link"
-                    href="http://bgbh.com.br/planilha/" target="_blank" rel="noreferrer noopener">visualizar
+                    href="http://bgbh.com.br/lista/" target="_blank" rel="noreferrer noopener">visualizar
                     planilha</a></div>
 
 
 
                 <div class="wp-block-button is-style-secondary"><a class="wp-block-button__link"
-                    href="http://bgbh/planilha/adicionar-jogo.php" target="_blank" rel="noreferrer noopener">adicionar
+                    href="http://bgbh/lista/adicionar-jogo.php" target="_blank" rel="noreferrer noopener">adicionar
                     jogo</a>
                 </div>
 
@@ -1048,14 +1048,14 @@
 
                 <div class="wp-block-button"><a
                     class="wp-block-button__link has-white-color has-text-color has-background"
-                    href="http://bgbh/planilha/remover-jogo.php" style="border-radius:5px;background-color:#cb1518"
+                    href="http://bgbh/lista/remover-jogo.php" style="border-radius:5px;background-color:#cb1518"
                     target="_blank" rel="noreferrer noopener">remover jogo</a></div>
               </div>
 
 
 
-              <a class="regras-planilha" href="regras-planilha.html" target="_blank" rel="noopener noreferrer"
-                style="color: white;">
+              <a class="regras-planilha" href="/lista/regras-utilizacao-lista.html" target="_blank"
+                rel="noopener noreferrer" style="color: white;">
                 REGRAS PARA UTILIZAÇÃO DA PLANILHA
                 <i class="fas fa-external-link-alt"></i>
               </a>
