--- a/lista/regras-utilizacao-lista.html
+++ b/lista/regras-utilizacao-lista.html
@@ -49,11 +49,11 @@
             usuários.
         </p>
         <p>Para ver os jogos disponíveis na lista de trocas & vendas clique aqui:
-            <a target="_blank" class="btn btn-sm btn-success" href="//bgbh.com.br/lista">Ver planilha</a>
+            <a target="_blank" class="btn btn-sm btn-primary" href="//bgbh.com.br/lista">Ver planilha</a>
         </p>
         <p>
             Para adicionar jogos, clique aqui:
-            <a target="_blank" class="btn btn-sm btn-primary" href="//bgbh.com.br/lista/create.php">Adicionar
+            <a target="_blank" class="btn btn-sm btn-success" href="//bgbh.com.br/lista/create.php">Adicionar
                 jogo</a>
         </p>
         <p>Para adicionar seus jogos na lista, basta preencher o formulário corretamente. <br />
