Ajustes finais parte 2

--- a/site/index_.html
+++ b/site/index_.html
@@ -69,7 +69,7 @@
 									</p>
 								</header>
 							</div>
-							<div class="col-4 col-12-medium">
+							<div class="col-4">
 								<section>
 									<a target="_blank" href="/lista/index.php" class="image featured btn-planilha"
 										data-aos="fade-up" data-aos-duration="15000" data-aos-easing="ease-in-out">
@@ -80,7 +80,7 @@
 									</a>
 								</section>
 							</div>
-							<div class="col-4 col-12-medium">
+							<div class="col-4">
 								<section>
 									<a target="_blank" href="/lista/adicionar-jogo.php"
 										class="image featured btn-planilha" data-aos="fade-up" data-aos-duration="15000"
@@ -92,7 +92,7 @@
 									</a>
 								</section>
 							</div>
-							<div class="col-4 col-12-medium">
+							<div class="col-4">
 								<section>
 									<a target="_blank" href="/lista/remover-jogo.php"
 										class="image featured btn-planilha" data-aos="fade-up" data-aos-duration="15000"
@@ -140,7 +140,7 @@
 							<div class="row">
 								<div class="col-5 col-12-medium">
 									<!-- Spotlight -->
-									<section class="box spotlight">
+									<section class="box spotlight secao-torneio">
 										<h2 class="font-800">
 											<i class="fas fa-chess-rook"></i>
 											Desafios e Torneios
@@ -173,6 +173,7 @@
 									</section>
 
 								</div>
+								<hr class="d-block d-md-none" />
 								<div class="col-7 col-12-medium">
 
 									<!-- Article list -->
@@ -270,17 +271,15 @@
 							<section>
 								<h2 class="font-800">Sobre o projeto</h2>
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus rhoncus, magna
-									feugiat interdum pretium, lectus nisl convallis mi, non aliquam diam risus non
-									risus.
-									Nulla id finibus ante. Donec elementum lacinia nisl, non imperdiet velit fringilla
-									eu.
-									Phasellus at nunc quis augue hendrerit iaculis. Maecenas eget dolor turpis. Praesent
-									semper, mi id tempus dictum, neque libero dignissim orci, at malesuada eros elit sit
-									amet risus. Donec sagittis purus id leo tempus, in vehicula odio placerat. Etiam
-									placerat magna eget bibendum placerat. Suspendisse a risus leo. Donec dictum
-									consectetur
-									ante, non varius dui ultricies in.
+									O <span class="font-800">BoardgameBH</span> é um projeto que tem como foco
+									o crescimento e a visibilidade
+									do Boardgame no país. O portal tem Belo Horizonte e região como carro chefe, mas não
+									possui fronteiras, promovendo e realizando ações de interesse e com um público
+									espalhado por todo país, como torneios online, divulgação de lançamentos e conteúdo
+									digital. Diversos braços do projeto ainda estão em desenvolvimento e em breve serão
+									apresentados para o grande público. Enquanto isso, aproveite todas as
+									funcionalidades liberadas e não deixe de apoiar esse e os demais projetos voltados
+									para o nosso hobby. Let’s Play!
 								</p>
 							</section>
 						</div>
