adicionar animacoes e og tags

--- a/site/index.html
+++ b/site/index.html
@@ -14,19 +14,18 @@
 
         gtag('config', 'G-PM1S230CVN');
     </script>
-    <title>BGBH</title>
+    <title>BoardgameBH [BGBH]</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
-    <meta property="og:title" content="BGBH - O portal de jogos de tabuleiro de Belo Horizonte">
-    <meta property="og:site_name" content="BoardgameBH">
+    <meta property="og:title" content="BoardgameBH [BGBH]">
+    <meta property="og:site_name" content="BoardgameBH [BGBH]">
     <meta property="og:url" content="http://www.bgbh.com.br/site">
     <meta property="og:url" content="http://www.bgbh.com.br/site/">
-    <meta property="og:description"
-        content="O BoardgameBH é um projeto que tem como foco o crescimento e a visibilidade do Boardgame no país, promovendo e realizando ações de amplo interesse e com um público espalhado por todo país.">
+    <meta property="og:description" content="Um portal feito para você que ama boardgame.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http://bgbh.com.br/site/images/bgbh-logo.png">
-    <meta property="og:image:secure_url" content="http://bgbh.com.br/site/images/logo-preto.png">
+    <meta property="og:image" content="http://bgbh.com.br/site/images/logo_preto.png">
+    <meta property="og:image:secure_url" content="http://bgbh.com.br/site/images/logo_preto.png">
 
     <link rel="icon" type="image/png" href="https://lucascmedeiros.com.br/bgbh/favicon.ico" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -148,8 +147,8 @@
 
                     <!-- Feature 2 -->
                     <section class="container box feature2 banner-area banner-unico">
-                        <div class="d-flex banner-pequeno">
-                            <img src="images/banner-pequeno.png" alt="banner" />
+                        <div class="d-flex align-center justify-center banner-pequeno">
+                            <img class="banner-ads-90" src="images/banner-pequeno.png" alt="banner" />
                         </div>
                     </section>
 
@@ -160,8 +159,8 @@
                 <div class="inner">
                     <!-- Feature 2 -->
                     <section class="container box feature2 d-flex align-center">
-                        <img src="images/banner-grande.png" alt="banner" />
-                        <img src="images/banner-grande.png" alt="banner" />
+                        <img class="banner-ads-273" src="images/banner-grande.png" alt="banner" />
+                        <img class="banner-ads-273" src="images/banner-grande.png" alt="banner" />
                     </section>
                 </div>
             </div>
@@ -174,12 +173,13 @@
                                 <div class="col-5 col-12-medium">
                                     <!-- Spotlight -->
                                     <section class="box spotlight secao-torneio">
-                                        <h2 class="font-800">
+                                        <h2 class="font-800" data-aos="fade-down-right">
                                             <i class="fas fa-chess-rook"></i> Desafios e Torneios
                                         </h2>
-                                        <article>
-                                            <a href="#" class="image featured"><img src="images/box-torneio.jpg"
-                                                    alt=""></a>
+                                        <article data-aos="fade-right" data-aos-delay="300">
+                                            <a href="#" class="image featured">
+                                                <img src="images/box-torneio.jpg" alt="imagem-torneio">
+                                            </a>
                                             <!-- <header>
 												<h3><a href="#">Neural Implants</a></h3>
 												<p>The pros and cons. Mostly cons.</p>
@@ -210,7 +210,7 @@
 
                                     <!-- Article list -->
                                     <section class="box article-list">
-                                        <h2 class="font-800">
+                                        <h2 class="font-800" data-aos="fade-down-left">
                                             <i class="fab fa-whatsapp"></i> Grupos de Whatsapp
                                         </h2>
 
@@ -218,9 +218,10 @@
                                         <article class="box excerpt">
                                             <a href="#" class="image imagem-grupos">
                                                 <img src="images/grupo-trocas.png"
-                                                    alt="grupo de whatsapp trocas e vendas" class="auto-img" />
+                                                    alt="grupo de whatsapp trocas e vendas" class="auto-img"
+                                                    data-aos="zoom-in-right" />
                                             </a>
-                                            <div class="descricao-grupos">
+                                            <div class="descricao-grupos" data-aos="fade-left" data-aos-delay="300">
                                                 <header class="titulos-grupos">
                                                     <h3><a href="#">BGBH - Trocas & Vendas</a>
                                                     </h3>
@@ -242,10 +243,10 @@
                                         <!-- Excerpt -->
                                         <article class="box excerpt">
                                             <a href="#" class="image imagem-grupos">
-                                                <img src="images/grupo-resenha.png"
-                                                    alt="grupo de whatsapp trocas e vendas" class="auto-img" />
+                                                <img src="images/grupo-resenha.png" alt="grupo de whatsapp resenha"
+                                                    class="auto-img" data-aos="zoom-in-right" />
                                             </a>
-                                            <div class="descricao-grupos">
+                                            <div class="descricao-grupos" data-aos="fade-left" data-aos-delay="300">
                                                 <header class="titulos-grupos">
                                                     <h3><a href="#">BGBH - Resenha BG</a></h3>
                                                 </header>
@@ -263,10 +264,10 @@
                                         <!-- Excerpt -->
                                         <article class="box excerpt">
                                             <a href="#" class="image imagem-grupos">
-                                                <img src="images/grupo-ofertas.png"
-                                                    alt="grupo de whatsapp trocas e vendas" class="auto-img" />
+                                                <img src="images/grupo-ofertas.png" alt="grupo de whatsapp ofertas"
+                                                    class="auto-img" data-aos="zoom-in-right" />
                                             </a>
-                                            <div class="descricao-grupos">
+                                            <div class="descricao-grupos" data-aos="fade-left" data-aos-delay="300">
                                                 <header class="titulos-grupos">
                                                     <h3><a href="#">BGBH - Ofertas BG</a></h3>
                                                 </header>
@@ -295,8 +296,8 @@
             <div class="inner">
                 <!-- Feature 2 -->
                 <section class="container box feature2 ">
-                    <img src="images/banner-grande.png" alt="banner" />
-                    <img src="images/banner-grande.png" alt="banner" />
+                    <img class="banner-ads-273" src="images/banner-grande.png" alt="banner" />
+                    <img class="banner-ads-273" src="images/banner-grande.png" alt="banner" />
                 </section>
             </div>
         </div>
