atualizar url /site para /

--- a/site/index.html
+++ b/site/index.html
@@ -20,12 +20,11 @@
 
     <meta property="og:title" content="BoardgameBH [BGBH]">
     <meta property="og:site_name" content="BoardgameBH [BGBH]">
-    <meta property="og:url" content="http://www.bgbh.com.br/site">
-    <meta property="og:url" content="http://www.bgbh.com.br/site/">
+    <meta property="og:url" content="http://www.bgbh.com.br/">
     <meta property="og:description" content="Um portal feito para você que ama boardgame.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http://bgbh.com.br/site/images/logo_preto.png">
-    <meta property="og:image:secure_url" content="http://bgbh.com.br/site/images/logo_preto.png">
+    <meta property="og:image" content="http://bgbh.com.br/images/logo_preto.png">
+    <meta property="og:image:secure_url" content="http://bgbh.com.br/images/logo_preto.png">
 
     <link rel="icon" type="image/png" href="https://lucascmedeiros.com.br/bgbh/favicon.ico" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
