--- a/lista/regras-utilizacao-lista.html
+++ b/lista/regras-utilizacao-lista.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/site">Site</a>
+                    <a class="nav-link" href="/">Site</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/lista">Lista <span class="sr-only">(current)</span></a>
